contacts and routs

--- a/contacts.html
+++ b/contacts.html
@@ -87,13 +87,57 @@
             <div class="route">
                 <div class="container">
                     <div class="row">
-                        <div class="col-18">
-                            <iframe src="https://yandex.ru/map-widget/v1/-/CBU9zUendB" width="560" height="400" frameborder="0"></iframe>
-                            <iframe src="https://yandex.ru/map-widget/v1/-/CBU9z4hHDD" width="560" height="400" frameborder="0"></iframe>
-                            <iframe src="https://yandex.ru/map-widget/v1/-/CBU9zFAWsD" width="560" height="400" frameborder="0"></iframe>
+                        <div class="col-17">
+                            <iframe src="https://yandex.ru/map-widget/v1/-/CBUD4SfGlD" width="100%" height="400" frameborder="0"></iframe>
+                        </div>
+                        <div class="col-7">
+                            <div class="route__wrap">
+                                <div class="route__by route__by_foot">Пешком, 40 мин.</div>
+                                <div class="route__by route__by_car">На автомобиле, 10 мин.</div>
+                                <div class="route__by route__by_public active">На общественном транспорте, 20 мин.</div>
+                                <div class="route__metro route__metro_ts active"><i>От метро «Тёплый стан»</i></div>
+                                <div class="route__metro route__metro_yz"><i>От метро «Юго-Западная»</i></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="contacts">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-7">
+                            <h3 class="h3">Телефоны:</h3>
+                            <ul>
+                                <li>+7 (495) 424-20-60;</li>
+                                <li>424-20-70;</li>
+                                <li>424-20-71;</li>
+                                <li>662-94-41 — многоканальный</li>
+                            </ul>
+                        </div>
+                        <div class="col-5">
+                            <h3 class="h3">Факс:</h3>
+                            <span>+7 (495) 424-20-91</span>
                         </div>
                         <div class="col-6">
-
+                            <h3 class="h3">Адрес:</h3>
+                            <p>142771, Москва, пос. Мосрентген, ПП «Автострой»</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="map">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-17">
+                            <div class="map__region" id="map"></div>
+                        </div>
+                        <div class="col-7">
+                            <ul class="map__tags">
+                                <li class="map__tags__presence"><i>Регионы присутствия нашей продукции</i></li>
+                                <li class="map__tags__factory"><i>Наши заводы</i></li>
+                                <li class="map__tags__office"><i>Центральный офис</i></li>
+                                <li class="map__tags__branch"><i>Филиалы</i></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
