--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12 col-lg-24">
+                            <div data-resize-after="cheese"></div>
                             <div class="cheese__product active" data-cheese="content" data-cheese-index="item1">
                             <h3 class="cheese__title">Продукты<br>для HoReCa</h3>
                             <a href="" class="cheese__back">&lt; Назад  —</a>
@@ -180,7 +181,7 @@
                                 <a href="" class="button button-cheese"><span>Подробно о товарax</span></a>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-24">
+                        <div class="col-12 col-lg-24" data-resize="cheese" data-resize-width="1000">
                             <div class="cheese-circle">
                                 <div class="shadow"></div>
                                 <div class="piece" data-number="item1" data-type="piece"></div>
