--- a/event.html
+++ b/event.html
@@ -168,17 +168,17 @@
                         <div class="row">
                             <div class="col-19 col-xl-17 col-lg-24 ">
                                 <ul class="product-pagination__pagination product-pagination__pagination_right">
-                                    <li><a href="" class="product-pagination__pagination__elem-active">1</a></li>
-                                    <li><a href="">2</a></li>
-                                    <li><a href="">3</a></li>
-                                    <li><a href="">4</a></li>
-                                    <li><a href="">5</a></li>
-                                    <li><a href="">6</a></li>
-                                    <li><a href="">7</a></li>
-                                    <li><a href="">8</a></li>
-                                    <li><a href="">9</a></li>
-                                    <li><a href="" class="product-pagination__pagination__elem-deactive">...</a></li>
-                                    <li><a href="">15</a></li>
+                                    <li class="product-pagination__pagination__li"><a href="" class="product-pagination__pagination__elem-active">1</a></li>
+                                    <li class="product-pagination__pagination__li"><a href="">2</a></li>
+                                    <li class="product-pagination__pagination__li"><a href="">3</a></li>
+                                    <li class="product-pagination__pagination__li"><a href="">4</a></li>
+                                    <li class="product-pagination__pagination__li col-xs-none"><a href="">5</a></li>
+                                    <li class="product-pagination__pagination__li col-xs-none"><a href="">6</a></li>
+                                    <li class="product-pagination__pagination__li col-sm-none"><a href="">7</a></li>
+                                    <li class="product-pagination__pagination__li col-sm-none"><a href="">8</a></li>
+                                    <li class="product-pagination__pagination__li col-sm-none"><a href="">9</a></li>
+                                    <li class="product-pagination__pagination__li"><a href="" class="product-pagination__pagination__elem-deactive">...</a></li>
+                                    <li class="product-pagination__pagination__li"><a href="">15</a></li>
                                 </ul>
                             </div>
                             <div class="col-5 col-xl-7 col-lg-24 css-right">
