--- a/about.html
+++ b/about.html
@@ -331,7 +331,7 @@
                             <div class="random__carousel">
                                 <div class="random__block" style="background-image: url('images/images-1.jpg')">
                                     <div class="random__logo"><img src="images/icons/bonfesto.png"></div>
-                                    <div class="random__body">
+                                    <div class="random__body random__body_about">
                                         <div class="random__title">
                                             Дегустация сыров от «Фудленд»
                                         </div>
@@ -347,7 +347,7 @@
                                     </div>
                                 </div>
                                 <div class="random__block" style="background-image: url('images/images-1.jpg')">
-                                    <div class="random__body">
+                                    <div class="random__body random__body_about">
                                         <div class="random__title">
                                             Дегустация сыров от «Фудленд»
                                         </div>
