--- a/direction.html
+++ b/direction.html
@@ -121,7 +121,7 @@
                             <div class="random__carousel">
                                 <div class="random__block" style="background-image: url('images/images-1.jpg')">
                                     <div class="random__logo"><img src="images/icons/bonfesto.png"></div>
-                                    <div class="random__body">
+                                    <div class="random__body random__body_about">
                                         <div class="random__title">
                                             Дегустация сыров от «Фудленд»
                                         </div>
@@ -137,7 +137,7 @@
                                     </div>
                                 </div>
                                 <div class="random__block" style="background-image: url('images/images-1.jpg')">
-                                    <div class="random__body">
+                                    <div class="random__body random__body_about">
                                         <div class="random__title">
                                             Дегустация сыров от «Фудленд»
                                         </div>
@@ -348,7 +348,7 @@
                                             <li><a href="">2</a></li>
                                             <li><a href="">3</a></li>
                                             <li><a href="">4</a></li>
-                                            <li><a href="">5</a></li>
+                                            <li class="col-sm-none"><a href="">5</a></li>
                                             <li><a href="" class="product-pagination__pagination__elem-deactive">...</a></li>
                                             <li><a href="">9</a></li>
                                         </ul>
