--- a/one-brand.html
+++ b/one-brand.html
@@ -520,11 +520,11 @@
                                             <li><a href="">2</a></li>
                                             <li><a href="">3</a></li>
                                             <li><a href="">4</a></li>
-                                            <li><a href="">5</a></li>
-                                            <li><a href="">6</a></li>
-                                            <li><a href="">7</a></li>
-                                            <li><a href="">8</a></li>
-                                            <li><a href="">9</a></li>
+                                            <li class="col-xs-none"><a href="">5</a></li>
+                                            <li class="col-xs-none"><a href="">6</a></li>
+                                            <li class="col-sm-none"><a href="">7</a></li>
+                                            <li class="col-sm-none"><a href="">8</a></li>
+                                            <li class="col-lg-none"><a href="">9</a></li>
                                             <li><a href="" class="product-pagination__pagination__elem-deactive">...</a></li>
                                             <li><a href="">15</a></li>
                                         </ul>
