contacts adaptive + make mask

--- a/contacts.html
+++ b/contacts.html
@@ -87,10 +87,10 @@
             <div class="route">
                 <div class="container">
                     <div class="row">
-                        <div class="col-17">
+                        <div class="col-17 col-lg-24">
                             <iframe src="https://yandex.ru/map-widget/v1/-/CBUD4SfGlD" width="100%" height="400" frameborder="0"></iframe>
                         </div>
-                        <div class="col-7">
+                        <div class="col-7 col-lg-24">
                             <div class="route__wrap">
                                 <div class="route__by route__by_foot">Пешком, 40 мин.</div>
                                 <div class="route__by route__by_car">На автомобиле, 10 мин.</div>
@@ -105,22 +105,28 @@
             <div class="contacts">
                 <div class="container">
                     <div class="row">
-                        <div class="col-7">
-                            <h3 class="h3">Телефоны:</h3>
-                            <ul>
-                                <li>+7 (495) 424-20-60;</li>
-                                <li>424-20-70;</li>
-                                <li>424-20-71;</li>
-                                <li>662-94-41 — многоканальный</li>
-                            </ul>
+                        <div class="col-7 col-xl-8 col-md-24">
+                            <div class="contacts__item">
+                                <h3 class="h3">Телефоны:</h3>
+                                <ul>
+                                    <li>+7 (495) 424-20-60;</li>
+                                    <li>424-20-70;</li>
+                                    <li>424-20-71;</li>
+                                    <li>662-94-41 — многоканальный</li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="col-5">
-                            <h3 class="h3">Факс:</h3>
-                            <span>+7 (495) 424-20-91</span>
+                        <div class="col-5 col-xl-8 col-md-24">
+                            <div class="contacts__item">
+                                <h3 class="h3">Факс:</h3>
+                                <span>+7 (495) 424-20-91</span>
+                            </div>
                         </div>
-                        <div class="col-6">
-                            <h3 class="h3">Адрес:</h3>
-                            <p>142771, Москва, пос. Мосрентген, ПП «Автострой»</p>
+                        <div class="col-6 col-xl-8 col-md-24">
+                            <div class="contacts__item">
+                                <h3 class="h3">Адрес:</h3>
+                                <p>142771, Москва, пос. Мосрентген, ПП «Автострой»</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -128,10 +134,10 @@
             <div class="map">
                 <div class="container">
                     <div class="row">
-                        <div class="col-17">
+                        <div class="col-17 col-lg-24">
                             <div class="map__region" id="map"></div>
                         </div>
-                        <div class="col-7">
+                        <div class="col-7 col-lg-24">
                             <ul class="map__tags">
                                 <li class="map__tags__presence"><i>Регионы присутствия нашей продукции</i></li>
                                 <li class="map__tags__factory"><i>Наши заводы</i></li>
@@ -215,8 +221,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer__parsley-left col-xs-none"></div>
-                <div class="footer__parsley-right col-xs-none"></div>
+                <div class="footer__parsley-left col-xs-none col-lg-none"></div>
+                <div class="footer__parsley-right col-xs-none col-lg-none"></div>
             </div>
         </footer>
     </div>
