--- a/product-category.html
+++ b/product-category.html
@@ -185,56 +185,43 @@
                     </div>
                     <div class="container-main">
                         <div class="category-carousel">
-                            <a href="">
-                                <div class="category-carousel__item">
-                                    <img src="images/product/category-for-slider/cat1.png" alt="">
+                            <a href="" class="category-carousel__item">
+                                <div class="category-carousel__item__images">
+                                    <img src="images/product/category/1.png" alt="">
+                                    <img src="images/product/category/1_hover.png" alt="" class="category-carousel__item__images_hover">
                                 </div>
                             </a>
-                            <a href="">
-                                <div class="category-carousel__item">
-                                    <img src="images/product/category-for-slider/cat2.png" alt="">
+                            <a href="" class="category-carousel__item">
+                                <div class="category-carousel__item__images">
+                                    <img src="images/product/category/2.png" alt="">
+                                    <img src="images/product/category/2_hover.png" alt="" class="category-carousel__item__images_hover">
                                 </div>
                             </a>
-                            <a href="">
-                                <div class="category-carousel__item">
-                                    <img src="images/product/category-for-slider/cat3.png" alt="">
+                            <a href="" class="category-carousel__item">
+                                <div class="category-carousel__item__images">
+                                    <img src="images/product/category/3.png" alt="">
+                                    <img src="images/product/category/3_hover.png" alt="" class="category-carousel__item__images_hover">
                                 </div>
                             </a>
-                            <a href="">
-                                <div class="category-carousel__item">
-                                    <img src="images/product/category-for-slider/cat4.png" alt="">
+                            <a href="" class="category-carousel__item">
+                                <div class="category-carousel__item__images">
+                                    <img src="images/product/category/4.png" alt="">
+                                    <img src="images/product/category/4_hover.png" alt="" class="category-carousel__item__images_hover">
                                 </div>
                             </a>
-                            <a href="">
-                                <div class="category-carousel__item">
-                                    <img src="images/product/category-for-slider/cat5.png" alt="">
+                            <a href="" class="category-carousel__item">
+                                <div class="category-carousel__item__images">
+                                    <img src="images/product/category/9.png" alt="">
+                                    <img src="images/product/category/9_hover.png" alt="" class="category-carousel__item__images_hover">
                                 </div>
                             </a>
-                            <a href="">
-                                <div class="category-carousel__item">
-                                    <img src="images/product/category-for-slider/cat1.png" alt="">
+                            <a href="" class="category-carousel__item">
+                                <div class="category-carousel__item__images">
+                                    <img src="images/product/category/9.png" alt="">
+                                    <img src="images/product/category/9_hover.png" alt="" class="category-carousel__item__images_hover">
                                 </div>
                             </a>
-                            <a href="">
-                                <div class="category-carousel__item">
-                                    <img src="images/product/category-for-slider/cat2.png" alt="">
-                                </div>
-                            </a>
-                            <a href="">
-                                <div class="category-carousel__item">
-                                    <img src="images/product/category-for-slider/cat3.png" alt="">
-                                </div>
-                            </a>
-                            <a href="">
-                                <div class="category-carousel__item">
-                                    <img src="images/product/category-for-slider/cat4.png" alt="">
-                                </div>
-                            </a>
-                            <a href="">
-                                <div class="category-carousel__item">
-                                    <img src="images/product/category-for-slider/cat5.png" alt="">
-                                </div>
-                            </a>
+
                         </div>
                         <section class="products-block">
                             <div class="container-fluid">
