Правки №10 - Добавляем блоки

--- a/product-category.html
+++ b/product-category.html
@@ -211,8 +211,26 @@
                             </a>
                             <a href="" class="category-carousel__item">
                                 <div class="category-carousel__item__images">
-                                    <img src="images/product/category/9.png" alt="">
-                                    <img src="images/product/category/9_hover.png" alt="" class="category-carousel__item__images_hover">
+                                    <img src="images/product/category/5.png" alt="">
+                                    <img src="images/product/category/5_hover.png" alt="" class="category-carousel__item__images_hover">
+                                </div>
+                            </a>
+                            <a href="" class="category-carousel__item">
+                                <div class="category-carousel__item__images">
+                                    <img src="images/product/category/6.png" alt="">
+                                    <img src="images/product/category/6_hover.png" alt="" class="category-carousel__item__images_hover">
+                                </div>
+                            </a>
+                            <a href="" class="category-carousel__item">
+                                <div class="category-carousel__item__images">
+                                    <img src="images/product/category/7.png" alt="">
+                                    <img src="images/product/category/7_hover.png" alt="" class="category-carousel__item__images_hover">
+                                </div>
+                            </a>
+                            <a href="" class="category-carousel__item">
+                                <div class="category-carousel__item__images">
+                                    <img src="images/product/category/8.png" alt="">
+                                    <img src="images/product/category/8_hover.png" alt="" class="category-carousel__item__images_hover">
                                 </div>
                             </a>
                             <a href="" class="category-carousel__item">
@@ -221,7 +239,24 @@
                                     <img src="images/product/category/9_hover.png" alt="" class="category-carousel__item__images_hover">
                                 </div>
                             </a>
-
+                            <a href="" class="category-carousel__item">
+                                <div class="category-carousel__item__images">
+                                    <img src="images/product/category/10.png" alt="">
+                                    <img src="images/product/category/10_hover.png" alt="" class="category-carousel__item__images_hover">
+                                </div>
+                            </a>
+                            <a href="" class="category-carousel__item">
+                                <div class="category-carousel__item__images">
+                                    <img src="images/product/category/11.png" alt="">
+                                    <img src="images/product/category/11_hover.png" alt="" class="category-carousel__item__images_hover">
+                                </div>
+                            </a>
+                            <a href="" class="category-carousel__item">
+                                <div class="category-carousel__item__images">
+                                    <img src="images/product/category/12.png" alt="">
+                                    <img src="images/product/category/12_hover.png" alt="" class="category-carousel__item__images_hover">
+                                </div>
+                            </a>
                         </div>
                         <section class="products-block">
                             <div class="container-fluid">
