Правки №12 - Сыр делаем блок О КОМПАНИИ и Спинер

--- a/index.html
+++ b/index.html
@@ -114,11 +114,59 @@
                     <div class="row">
                         <div class="col-12 col-lg-24">
                             <div data-resize-after="cheese"></div>
+                            <div class="cheese__product" data-cheese="content" data-cheese-index="default">
+                                <h3 class="cheese__title">О компании</h3>
+                                <a href="" class="cheese__back">&lt; Назад  —</a>
+                                <div class="cheese__text-block">
+                                    <div class="cheese__text scroll-pane">
+                                        <p>
+                                            Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                        </p>
+                                        <p>
+                                            Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                        </p>
+                                        <p>
+                                            Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                        </p>
+                                        <p>
+                                            Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                        </p>
+                                    </div>
+                                    <ul class="cheese__links">
+                                        <li class="cheese__item"><a href="" class="cheese__link">Масло сливочное и спреды</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Молоко и сливки</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Сухие молочные продукты</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Кисломолочные продукты</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Выдержанные сыры</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Твёрдые сыры</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Плавленный сыр</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Рассольные продукты</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Молодые сыры</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Сливочные и творожные сыры</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Специалитеты с сыром</a></li>
+                                        <li class="cheese__item"><a href="" class="cheese__link">Молочные напитки</a></li>
+                                    </ul>
+                                </div>
+                                <a href="" class="button button-cheese"><span>Подробно о товарax</span></a>
+                            </div>
                             <div class="cheese__product active" data-cheese="content" data-cheese-index="item1">
                             <h3 class="cheese__title">Продукты<br>для HoReCa</h3>
                             <a href="" class="cheese__back">&lt; Назад  —</a>
                             <div class="cheese__text-block">
-                                <p class="cheese__text">Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.</p>
+                                <div class="cheese__text scroll-pane">
+                                    <p>
+                                        Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                    </p>
+                                    <p>
+                                        Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                    </p>
+                                    <p>
+                                        Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                    </p>
+                                    <p>
+                                        Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                    </p>
+                                </div>
                                 <ul class="cheese__links">
                                     <li class="cheese__item"><a href="" class="cheese__link">Масло сливочное и спреды</a></li>
                                     <li class="cheese__item"><a href="" class="cheese__link">Молоко и сливки</a></li>
@@ -140,7 +188,20 @@
                                 <h3 class="cheese__title">Продукты<br>для HoReCa</h3>
                                 <a href="" class="cheese__back">&lt; Назад  —</a>
                                 <div class="cheese__text-block">
-                                    <p class="cheese__text">2</p>
+                                    <div class="cheese__text scroll-pane">
+                                        <p>
+                                            Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                        </p>
+                                        <p>
+                                            Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                        </p>
+                                        <p>
+                                            Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                        </p>
+                                        <p>
+                                            Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                        </p>
+                                    </div>
                                     <ul class="cheese__links">
                                         <li class="cheese__item"><a href="" class="cheese__link">Масло сливочное и спреды</a></li>
                                         <li class="cheese__item"><a href="" class="cheese__link">Молоко и сливки</a></li>
@@ -162,7 +223,20 @@
                                 <h3 class="cheese__title">Продукты<br>для HoReCa</h3>
                                 <a href="" class="cheese__back">&lt; Назад  —</a>
                                 <div class="cheese__text-block">
-                                    <p class="cheese__text">Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.</p>
+                                    <div class="cheese__text scroll-pane">
+                                        <p>
+                                            Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                        </p>
+                                        <p>
+                                            Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                        </p>
+                                        <p>
+                                            Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                        </p>
+                                        <p>
+                                            Мы начали свою деятельность в 1994 году и благодаря профессиональному отношению к делу приобрели солидную деловую репутацию. На сегодняшний день компания «Фудлэнд» является крупнейшим в России дистрибьютором различных видов сыров, сливочного масла и сухих молочных продуктов. Сотрудничество с нами – это возможность круглогодично получать самый полный ассортимент традиционных отечественных и импортных сыров.
+                                        </p>
+                                    </div>
                                     <ul class="cheese__links">
                                         <li class="cheese__item"><a href="" class="cheese__link">Масло сливочное и спреды</a></li>
                                         <li class="cheese__item"><a href="" class="cheese__link">Молоко и сливки</a></li>
@@ -786,6 +860,8 @@
 <script src="./js/libs/jquery.min.js" type="text/javascript"></script>
 <script src="./js/libs/slick.js" type="text/javascript"></script>
 <script src="./js/libs/anime.js" type="text/javascript"></script>
+<script src="./js/libs/scroll/jquery.mousewheel.js" type="text/javascript"></script>
+<script src="./js/libs/scroll/jquery.jscrollpane.min.js" type="text/javascript"></script>
 <!-- Core JS Files -->
 <script src="./js/scripts.js" type="text/javascript"></script>
 </html>
