--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ru">
 <head>
     <meta charset="utf-8" />
     <!--Icons -->
@@ -10,13 +9,11 @@
     <title>title</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <!-- Fonts and icons -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
     <!-- CSS Files -->
     <link href="./css/style.css" rel="stylesheet" />
     <!-- JS Files -->
 </head>
-
 <body>
     <div class="wrap">
         <header>
@@ -619,6 +616,6 @@
 <script src="./js/libs/slick.js" type="text/javascript"></script>
 <script src="./js/libs/anime.js" type="text/javascript"></script>
 <!-- Core JS Files -->
-<script src="./js/scripts.js" type="text/javascript"></script>
+<script src="./js/scripts.min.js" type="text/javascript"></script>
 
 </html>
