--- a/product-catalog.html
+++ b/product-catalog.html
@@ -9,7 +9,7 @@
     <title>title</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <!-- Fonts and icons -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
     <!-- CSS Files -->
     <link href="./css/style.css" rel="stylesheet" />
@@ -752,6 +752,6 @@
 <script src="./js/libs/classie.js"></script>
 <script src="./js/libs/selectFx.js"></script>
 <!-- Core JS Files -->
-<script src="./js/scripts.js" type="text/javascript"></script>
+<script src="./js/scripts.min.js" type="text/javascript"></script>
 
 </html>
