--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="row">
                         <div class="col-12 col-lg-24">
                             <div data-resize-after="cheese"></div>
-                            <div class="cheese__product" data-cheese="content" data-cheese-index="default">
+                            <div class="cheese__product active" data-cheese="content" data-cheese-index="default">
                                 <h3 class="cheese__title">О компании</h3>
                                 <div class="cheese__text-block">
                                     <div class="cheese__text scroll-pane">
@@ -148,7 +148,7 @@
                                 </div>
                                 <a href="" title="" class="button button-cheese"><span>Подробно о товарax</span></a>
                             </div>
-                            <div class="cheese__product active" data-cheese="content" data-cheese-index="item1">
+                            <div class="cheese__product" data-cheese="content" data-cheese-index="item1">
                             <h3 class="cheese__title">Продукты<br>для HoReCa</h3>
                             <a href="" title="" class="cheese__back">&lt; Назад  —</a>
                             <div class="cheese__text-block">
